
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct snd_soc_dai {size_t id; struct snd_soc_component* component; } ;
struct snd_soc_component {int dummy; } ;
struct adav80x {unsigned int* dai_fmt; int regmap; } ;


 unsigned int ADAV80X_CAPTURE_MODE_I2S ;
 unsigned int ADAV80X_CAPTURE_MODE_LEFT_J ;
 unsigned int ADAV80X_CAPTURE_MODE_MASK ;
 unsigned int ADAV80X_CAPTURE_MODE_MASTER ;
 unsigned int ADAV80X_CAPTURE_MODE_RIGHT_J ;
 unsigned int ADAV80X_PLAYBACK_MODE_I2S ;
 unsigned int ADAV80X_PLAYBACK_MODE_LEFT_J ;
 unsigned int ADAV80X_PLAYBACK_MODE_MASTER ;
 unsigned int ADAV80X_PLAYBACK_MODE_RIGHT_J_24 ;
 int EINVAL ;


 unsigned int SND_SOC_DAIFMT_FORMAT_MASK ;

 unsigned int SND_SOC_DAIFMT_INV_MASK ;

 unsigned int SND_SOC_DAIFMT_MASTER_MASK ;


 int ** adav80x_port_ctrl_regs ;
 int regmap_update_bits (int ,int ,unsigned int,unsigned int) ;
 int regmap_write (int ,int ,unsigned int) ;
 struct adav80x* snd_soc_component_get_drvdata (struct snd_soc_component*) ;

__attribute__((used)) static int adav80x_set_dai_fmt(struct snd_soc_dai *dai, unsigned int fmt)
{
 struct snd_soc_component *component = dai->component;
 struct adav80x *adav80x = snd_soc_component_get_drvdata(component);
 unsigned int capture = 0x00;
 unsigned int playback = 0x00;

 switch (fmt & SND_SOC_DAIFMT_MASTER_MASK) {
 case 133:
  capture |= ADAV80X_CAPTURE_MODE_MASTER;
  playback |= ADAV80X_PLAYBACK_MODE_MASTER;
 case 132:
  break;
 default:
  return -EINVAL;
 }

 switch (fmt & SND_SOC_DAIFMT_FORMAT_MASK) {
 case 131:
  capture |= ADAV80X_CAPTURE_MODE_I2S;
  playback |= ADAV80X_PLAYBACK_MODE_I2S;
  break;
 case 130:
  capture |= ADAV80X_CAPTURE_MODE_LEFT_J;
  playback |= ADAV80X_PLAYBACK_MODE_LEFT_J;
  break;
 case 128:
  capture |= ADAV80X_CAPTURE_MODE_RIGHT_J;
  playback |= ADAV80X_PLAYBACK_MODE_RIGHT_J_24;
  break;
 default:
  return -EINVAL;
 }

 switch (fmt & SND_SOC_DAIFMT_INV_MASK) {
 case 129:
  break;
 default:
  return -EINVAL;
 }

 regmap_update_bits(adav80x->regmap, adav80x_port_ctrl_regs[dai->id][0],
  ADAV80X_CAPTURE_MODE_MASK | ADAV80X_CAPTURE_MODE_MASTER,
  capture);
 regmap_write(adav80x->regmap, adav80x_port_ctrl_regs[dai->id][1],
  playback);

 adav80x->dai_fmt[dai->id] = fmt & SND_SOC_DAIFMT_FORMAT_MASK;

 return 0;
}
